--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,5 +1,8 @@
-.header__top {
+.header {
   background-color: @dark;
+}
+
+.header__top {
   position: relative;
 }
 
@@ -9,6 +12,10 @@
 
 .header__logo-icon {
   margin-right: 4px;
+}
+
+.header__logo span {
+  display: none;
 }
 
 .header__menu-button {
@@ -55,8 +62,10 @@
   }
 }
 
-.header__top--closed .header__dropdown {
-  display: none;
+@media (max-width: 679px) {
+  .header__top--closed .header__dropdown {
+    display: none;
+  }
 }
 
 .header__top--open .header__dropdown {
@@ -80,8 +89,29 @@
   margin-top: 16px;
 }
 
-.header__submenu-item {
-  padding: 8px 0;
+.header__menu-item .header__menu-link--main {
+  position: relative;
+  outline: none;
+  &:hover::before,
+  &:focus::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    margin-top: 30px;
+    background-color: @yellow;
+  }
+}
+
+.header__submenu-item a {
+  display: block;
+  padding: 8px 24px;
+  outline: none;
+  &:hover,
+  &:focus {
+    background-color: @gray-dark;
+    color: @yellow;
+  }
 }
 
 .header__menu-link {
@@ -99,18 +129,27 @@
   .button-clean();
   .font-set(16px, 24px, 500, @white, left);
   padding-left: 16px;
-}
-
-.header__submenu-button::after {
-  content: "";
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  margin-left: 8px;
-  margin-top: 6px;
-  background-image: url("../img/catalog-indicator.svg");
-  background-position: center;
-  background-repeat: no-repeat;
+  cursor: pointer;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    margin-left: 8px;
+    margin-top: 6px;
+    background-image: url("../img/catalog-indicator.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  &:hover::before,
+  &:focus::before {
+    content: "";
+    position: absolute;
+    width: 88px;
+    height: 4px;
+    margin-top: 30px;
+    background-color: @yellow;
+  }
 }
 
 .header__catalog--closed {
@@ -127,6 +166,15 @@
   & .header__submenu {
     display: block;
   }
+  &::before {
+    content: "";
+    position: absolute;
+    width: 88px;
+    height: 4px;
+    margin-top: 30px;
+    margin-left: 16px;
+    background-color: @yellow;
+  }
 }
 
 .header__link {
@@ -135,6 +183,15 @@
   margin: 35px 0;
   padding: 0 48px;
   text-decoration: underline;
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
+}
+
+.header__link-wrapper,
+.header__contacts-wrapper {
+  position: relative;
 }
 
 .header__link::before {
@@ -167,4 +224,122 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: 18px 18px;
+}
+
+@media (min-width: @desktop) {
+  .header__top {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    .container();
+  }
+
+  .header__top-wrapper {
+    padding: 20px 0;
+  }
+
+  .header__logo {
+    display: flex;
+  }
+
+  .header__logo-icon {
+    width: 32px;
+    height: 32px;
+    margin-right: 8px;
+  }
+
+  .header__logo span {
+    display: inline-block;
+    .font-set(24px, 32px, 700, @white, left);
+    text-transform: uppercase;
+  }
+
+  .header__logo-text {
+    display: none;
+  }
+
+  .header__menu-button {
+    display: none;
+  }
+
+  .header__dropdown {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-left: 32px;
+  }
+
+  .header__menu {
+    display: flex;
+  }
+
+  .header__menu-item {
+    margin: 0;
+    margin-left: 40px;
+    &:first-child {
+      margin-left: 0;
+      padding-right: 21px;
+    }
+  }
+
+  .header__menu-link {
+    padding: 0;
+  }
+
+  .header__submenu-button {
+    padding-left: 0;
+  }
+
+  .header__catalog {
+    position: relative;
+  }
+
+  .header__catalog--open,
+  .header__catalog--nojs {
+    &::before {
+      margin-left: 0;
+    }
+  }
+
+  .header__submenu {
+    position: absolute;
+    top: 32px;
+    left: 0;
+    z-index: 1;
+    width: 392px;
+    background-color: @dark;
+    & .header__menu-link {
+      display: block;
+      padding-left: 16px;
+      padding-right: 16px;
+    }
+  }
+
+  .header__link-wrapper {
+    margin-left: 136px;
+  }
+
+  .header__link {
+    margin: 0;
+    padding: 0;
+    padding-left: 34px;
+    &::before {
+      left: 0;
+    }
+  }
+
+  .header__contacts-wrapper {
+    margin-left: 40px;
+  }
+
+  .header__contacts {
+    margin: 0;
+    padding: 0;
+    padding-left: 25px;
+  }
+
+  .header__contact::before {
+    left: 0;
+  }
 }
