--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -5,6 +5,10 @@
 .info__block {
   .font-set(14px, 20px, 500, @dark, left);
 }
+.info__block-inner {
+  position: relative;
+  z-index: 1;
+}
 
 .info__block--size {
   color: @white;
@@ -16,8 +20,6 @@
   & .info__block-title {
     color: @white;
   }
-  z-index: -1;
-  position: relative;
 }
 
 .info__block-text {
@@ -27,8 +29,93 @@
 .info__block-link {
   color: @dark;
   text-decoration: underline;
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
 }
 
 .info__block-link--white {
   color: @white;
+}
+
+@media (min-width: @desktop) {
+  .info__block--size {
+    .info__block-inner {
+      padding-bottom: 0;
+      margin: 0 auto;
+    }
+    background-image: linear-gradient(180deg, rgba(43, 40, 49, 0.6), rgba(43, 40, 49, 0.6)), url("../img/road-big.jpg");
+    background-attachment: fixed;
+    .info__block-inner {
+      max-width: 1176px;
+      height: 312px;
+      padding-top: 88px;
+    }
+
+    @media (min-width: 1200px) {
+      .info__block-inner::after {
+        content: "";
+        width: 335px;
+        height: 456px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        background-image: url("../img/main-road.png");
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+    }
+  }
+
+  .info__block--differences {
+    .info__block-inner {
+      width: 576px;
+      height: 377px;
+      padding-top: 172px;
+    }
+
+    @media (min-width: 1200px) {
+      .info__block-inner {
+        margin: 0 auto;
+        padding-left: 600px;
+      }
+      .info__block-inner::before {
+        content: "";
+        width: 428px;
+        height: 373px;
+        position: absolute;
+        z-index: 1;
+        bottom: 88px;
+        left: 0;
+        background-image: url("../img/avery.png");
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+      .info__block-inner::after {
+        content: "";
+        width: 332px;
+        height: 272px;
+        position: absolute;
+        z-index: 0;
+        bottom: 124px;
+        left: 112px;
+        border: 6px solid @yellow;
+        background-color: @white;
+      }
+    }
+
+  }
+
+  .info__block-text {
+    margin: 32px 0;
+    width: 576px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .info__block-link {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
