--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "normalize";
 @import "scaffolding";
 @import "blocks/title";
+@import "blocks/overlay";
 @import "blocks/header";
 @import "blocks/promo";
 @import "blocks/button";
@@ -11,3 +12,4 @@
 @import "blocks/advantages";
 @import "blocks/about";
 @import "blocks/footer";
+@import "blocks/popup";
